dons d'ascendance 05 changés et traduits

--- a/data/feats/ancestry-05-Ewk7h9aQpKvy1RJo.htm
+++ b/data/feats/ancestry-05-Ewk7h9aQpKvy1RJo.htm
@@ -2,14 +2,12 @@ Name: Crystalline Dust
 Nom: Poussière cristalline
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to disperse the crystalline motes coating your body as a haze.
 Avantage: Des particules cristallines vous masquent.
------- Benefits and spoiler ----
-Avantage: Des particules cristallines vous masquent.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <hr />
@@ -19,5 +17,5 @@ Avantage: Des particules cristallines vous masquent.
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous avez appris à disperser les particules cristallines recouvrant votre corps sous la forme de brume.</p>
-<p>Vous devenez Masqué, bien que vous ne puissiez pas utiliser ce camouflage pour vous Cacher ou Être furtif, comme d'ordinaire avec le camouflage lorsque votre position reste toujours évidente. Les particules restent à quelques centimètres de votre peau, se déplaçant avec vous et persistent pendant un nombre de rounds égal à la moitié de votre niveau.</p>
+<p>Vous avez appris à disperser les particules cristallines recouvrant votre corps sous la forme de brume. Vous devenez @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué}, bien que vous ne puissiez pas utiliser ce camouflage pour vous Cacher ou Être furtif, comme d'ordinaire avec le camouflage lorsque votre position reste toujours évidente.</p>
+<p>Les particules restent à quelques centimètres de votre peau, se déplaçant avec vous et persistent pendant un nombre de rounds égal à la moitié de votre niveau.</p>
