--- a/data/feats/ancestry-05-M0B0rt6rk5MkHiBN.htm
+++ b/data/feats/ancestry-05-M0B0rt6rk5MkHiBN.htm
@@ -1,13 +1,14 @@
 Name: Hybrid Shape
-Nom: 
+Nom: Forme hybride
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous prenez une forme hybride qui vous octroie le meilleur de vos deux formes.
 
 ------ Description (en) ------
 <p>Mastery of your shapeshifting lets you combine the best features of your humanoid and spider forms. When using your Change Shape ability, you can assume a bipedal hybrid shape. This form gains all the benefits of your spider shape as well as the ability to use items and take manipulate actions just as easily as your human shape.</p>
 ------ Description (fr) ------
+<p>La maîtrise de votre métamorphose vous permet de combiner les meilleures caractéristiques de vos formes humanoïde et arachnéenne. Lorsque vous utilisez votre capacité Changer de forme, vous pouvez adopter une forme hybride bipède. Cette forme gagne tous les avantages de votre forme araignée ainsi que la capacité d'utiliser des objets et d'effectuer des actions de manipulation aussi facilement que sous votre forme humaine.</p>
