--- a/data/feats/ancestry-05-ab7xlmUzPUOFnAl2.htm
+++ b/data/feats/ancestry-05-ab7xlmUzPUOFnAl2.htm
@@ -2,14 +2,12 @@ Name: Water Conjuration
 Nom: Conjuration d'eau
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You carry the ocean with you wherever you go.
 Avantage: Vous pouvez lancer Création d'eau une fois par jour.
------- Benefits and spoiler ----
-Avantage: Vous pouvez lancer Création d'eau une fois par jour.
+
 ------ Description (en) ------
 <p>You carry the ocean with you wherever you go. You can cast @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Create Water} as a primal innate spell once per day. Each time you cast <em>create water</em>, you choose if you create fresh water or salt water.</p>
 ------ Description (fr) ------
