dons ascendance 05 suite

--- a/data/feats/ancestry-05-tB6V6rWv8vAFsKsX.htm
+++ b/data/feats/ancestry-05-tB6V6rWv8vAFsKsX.htm
@@ -2,14 +2,12 @@ Name: Nanite Shroud
 Nom: Voile de nanites
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites fly out of your body, swarming around you in a cloud.
 Avantage: Vous êtes Masqué pendant un nombre de rounds égal à la moitié de votre niveau.
------- Benefits and spoiler ----
-Avantage: Vous êtes Masqué pendant un nombre de rounds égal à la moitié de votre niveau.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <hr />
@@ -19,5 +17,5 @@ Avantage: Vous êtes Masqué pendant un nombre de rounds égal à la moitié de 
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vos nanites s'envolent de votre corps, dans un nuage formant un voile autour de vous.</p>
-<p>Vous êtes Masqué pendant un nombre de rounds égal à la moitié de votre niveau. Vous ne pouvez utiliser ce camouflage pour se Cacher ou Être furtif, comme à l'ordinaire pour un camouflage qui rend votre position évidente. Tant que Voile de nanites est actif, vous ne pouvez utiliser d'autres capacités qui nécessitent l'utilisation de vos nanites.</p>
+<p>Vos nanites s'envolent de votre corps, dans un nuage formant un voile autour de vous. Vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} pendant un nombre de rounds égal à la moitié de votre niveau. Vous ne pouvez utiliser ce camouflage pour se Cacher ou Être furtif, comme à l'ordinaire pour un camouflage qui rend votre position évidente.</p>
+<p>Tant que Voile de nanites est actif, vous ne pouvez utiliser d'autres capacités qui nécessitent l'utilisation de vos nanites.</p>
