--- a/data/feats/ancestry-05-vdowlFFknihiz5pm.htm
+++ b/data/feats/ancestry-05-vdowlFFknihiz5pm.htm
@@ -2,14 +2,12 @@ Name: Intercorporate
 Nom: Intercorporer
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your ordered physiology rejects unwelcome elements.
 Avantage: Vous pouvez tenter de mettre fin à une maladie, un poisons et aux dégâts persistants une fois par jour.
------- Benefits and spoiler ----
-Avantage: Vous pouvez tenter de mettre fin à une maladie, un poisons et aux dégâts persistants une fois par jour.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <p><strong>Requirements</strong> You’re afflicted by a disease or poison, or are taking persistent damage.</p>
@@ -21,7 +19,9 @@ Avantage: Vous pouvez tenter de mettre fin à une maladie, un poisons et aux dé
 </ul>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Conditions</strong> Vous  êtes affligé par une maladie ou un poison ou subissez des dégâts persistants. Votre physiologie ordonnée rejette les éléments malvenus. Choisissez en un.</p>
+<p><strong>Conditions</strong> Vous  êtes affligé par une maladie ou un poison ou subissez des dégâts persistants.</p>
+<hr />
+<p>Votre physiologie ordonnée rejette les éléments malvenus. Choisissez en un.</p>
 <hr />
 <ul>
 <li><strong>Maladie ou poison</strong> Tentez un jet de sauvegarde contre l'affliction à son stade actuel. En cas d'échec, le stade de l'affliction n'augmente pas mais vous subissez les effets du stade auquel vous étiez. En cas d'échec critique, le stade ne s'accroît que de 1.</li>
