dons ancestraux 05 et 09

--- a/data/feats/ancestry-05-ZOOP2RzRJnpVqnCr.htm
+++ b/data/feats/ancestry-05-ZOOP2RzRJnpVqnCr.htm
@@ -2,14 +2,12 @@ Name: Aquatic Conversationalist
 Nom: Conversant aquatique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can ask questions of, receive answers from, and use the Diplomacy skill with animals with the amphibious or aquatic traits.
 Avantage: Vous pouvez parler aux animaux amphibies ou aquatiques.
------- Benefits and spoiler ----
-Avantage: Vous pouvez parler aux animaux amphibies ou aquatiques.
+
 ------ Description (en) ------
 <p>You can ask questions of, receive answers from, and use the Diplomacy skill with animals with the amphibious or aquatic traits. You gain a +1 circumstance bonus to @Compendium[pf2e.actionspf2e.OX4fy22hQgUHDr0q]{Make an Impression} on such animals.</p>
 ------ Description (fr) ------
