--- a/data/feats/ancestry-05-ZwvSiuFFsyNGJiB3.htm
+++ b/data/feats/ancestry-05-ZwvSiuFFsyNGJiB3.htm
@@ -1,13 +1,14 @@
 Name: Ceremony of Sunlight
-Nom: 
+Nom: Cérémonie de la lumière solaire
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Votre Guérison solaire vous guérit de 1d8 pv par niveau. 
 
 ------ Description (en) ------
 <p>You have learned how to master the power contained within sunlight, just like the trees that form your body. Your Sunlight Healing recovers 1d8 Hit Points per level.</p>
 ------ Description (fr) ------
+<p>Vous avez appris à maîtriser le pouvoir contenu dans la lumière du soleil, tout comme les arbres qui composent votre corps. Votre Guérison solaire vous peremet de récupérer 1d8 points de vie par niveau.</p>
