--- a/data/feats/ancestry-09-4hFeaF4MlqIHb6gb.htm
+++ b/data/feats/ancestry-09-4hFeaF4MlqIHb6gb.htm
@@ -2,14 +2,12 @@ Name: Azata Magic
 Nom: Magie des azatas
 PrereqEN: |Musetouched
 PrereqFR: Touché par la muse
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your lineage traces back to the realm of Elysium, and you can harness its magic using this connection.
 Avantage: Vous pouvez Lancer Poussière scintillante et Délivrance de la paralysie une fois par jour chacun au niveau 2.
------- Benefits and spoiler ----
-Avantage: Vous pouvez Lancer Poussière scintillante et Délivrance de la paralysie une fois par jour chacun au niveau 2.
+
 ------ Description (en) ------
 <p>Your lineage traces back to the realm of Elysium, and you can harness its magic using this connection. You can cast @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Glitterdust} and @Compendium[pf2e.spells-srd.BCuHKrDeJ4eq53M6]{Remove Paralysis} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
