ancestry features changées et ascendance 09

--- a/data/ancestryfeatures/feat-01-7vHLPleFpSqKAjWG.htm
+++ b/data/ancestryfeatures/feat-01-7vHLPleFpSqKAjWG.htm
@@ -1,7 +1,6 @@
 Name: Stormtossed Tengu
 Nom: Tengu battu par les vents
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Whether due to a blessing from Hei Feng or hatching from your egg during a squall, you are resistant to storms. You gain electricity resistance equal to half your level (minimum 1).</p>
