--- a/data/ancestryfeatures/feat-01-ptpK6H1rM4Bu3ry4.htm
+++ b/data/ancestryfeatures/feat-01-ptpK6H1rM4Bu3ry4.htm
@@ -1,7 +1,6 @@
 Name: Mountainkeeper Tengu
 Nom: Tengu gardemontagne
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You come from a line of tengu ascetics, leaving you with a link to the spirits of the world and the Great Beyond. You can cast the @Compendium[pf2e.spells-srd.kcelf6IHl3L9VXXg]{Disrupt Undead} cantrip as a primal innate spell at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
