--- a/data/feats/ancestry-09-bpNpqxtsBJIPYSX9.htm
+++ b/data/feats/ancestry-09-bpNpqxtsBJIPYSX9.htm
@@ -1,9 +1,10 @@
 Name: Ceremony of Strengthened Hand
-Nom: 
+Nom: Cérémonie de la main fortifiée
 PrereqEN: |Ceremony of the Evened Hand
-PrereqFR: 
-État: aucune
+PrereqFR: Cérémonie de la main levée
+État: libre
 
 ------ Description (en) ------
 <p>Your exoskeleton’s weapons are even more potent. If you have a claws unarmed attack, it gains the deadly d8 trait. If you have a branch unarmed attack, it gains the shove and trip traits.</p>
 ------ Description (fr) ------
+<p>Les armes de votre exosquelette sont encore plus puissantes. Si vous avez une attaque de griffes à mains nues, elle obtient le trait mortel d8. Si vous possédez une attaque à mains nues de branche, elle obtient les traits Pousser et Croc-en-Jambe.</p>
