--- a/data/feats/ancestry-09-bpNpqxtsBJIPYSX9.htm
+++ b/data/feats/ancestry-09-bpNpqxtsBJIPYSX9.htm
@@ -4,6 +4,10 @@ PrereqEN: |Ceremony of the Evened Hand
 PrereqFR: Cérémonie de la main levée
 État: libre
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vos attaques à mains nues ancestrales sont plus puissantes
+
 ------ Description (en) ------
 <p>Your exoskeleton’s weapons are even more potent. If you have a claws unarmed attack, it gains the deadly d8 trait. If you have a branch unarmed attack, it gains the shove and trip traits.</p>
 ------ Description (fr) ------
