--- a/data/spell-effects/03-llrOM8rPP9nxIuEN.htm
+++ b/data/spell-effects/03-llrOM8rPP9nxIuEN.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Insect Form (Mantis)
-Nom: Effet Forme d'insecte (Mante)
+Nom: Effet : Forme d'insecte (Mante)
 État: libre
 
 ------ Description (en) ------
