--- a/data/pathfinder-bestiary-3/6yc1exIcngUEvBQH.htm
+++ b/data/pathfinder-bestiary-3/6yc1exIcngUEvBQH.htm
@@ -1,6 +1,6 @@
 Name: Adhukait
-Nom: 
-État: aucune
+Nom: Adhukait
+État: libre
 
 ------ Description (en) ------
 <p>Asuras are, above all, proof that the gods are not infallible. These fiends arose as physical manifestations of divine accidents, taking form when the gods themselves stumbled and blasphemed on a cosmic scale. As a result of their own divine genesis, an asura loves above all to undo the workings of the divine. They eagerly travel to the Material Plane, seeking out temples, congregations of faithful worshippers, and religious orders of all stripes to sow doubt and destroy what the gods seek to build.</p>
@@ -9,3 +9,9 @@ Nom:
 <p>Even adhukaits' origin contains not one but two stories. Some believe they were created when two godlike brigands attempted to raid a celestial hall and had their bodies crushed together and thrown down from the heavens. Another legend states two asura twins once challenged a great warrior to duel them in turn. When they attacked him together, he was so enraged he slammed one into the other so hard that they were fused together from that day forth.</p>
 <p>Adhukaits are among the most elite asura warriors, making up for what they lack in spellcraft with sheer viciousness and single-minded pursuit of inflicting pain.</p>
 ------ Description (fr) ------
+<p>Les Asuras sont, avant tout, la preuve que les dieux ne sont pas infaillibles. Ces monstres sont apparus comme des manifestations physiques d'accidents divins, prenant forme lorsque les dieux eux-mêmes ont trébuché et blasphémé à l'échelle cosmique. En raison de sa propre genèse divine, l'Asura aime par-dessus tout défaire le travail des dieux. Ils se rendent avec empressement dans le Plan Matériel, à la recherche de temples, de congrégations d'adorateurs fidèles et d'ordres religieux de tous bords, pour semer le doute et détruire ce que les dieux cherchent à construire.</p>
+<hr />
+<p>Doublement discipliné tel un moine et doublement mortel tel un guerrier, un Adhukait est l'ultime perversion de la dualité, deux guerriers asuras à pointe empalés ensemble pour former une machine à tuer féroce et incroyablement efficace. Les deux têtes, les deux cœurs et les deux esprits d'un Adhukait fonctionnent rarement comme un seul homme - sauf pour mutiler ou tuer.</p>
+<p>L'origine des Adhukaits ne contient pas une mais deux histoires. Certains pensent qu'ils ont été créés lorsque deux brigands divins ont tenté de faire un raid sur une salle céleste et ont vu leurs corps écrasés ensemble et jetés du haut des cieux. Une autre légende raconte que deux jumeaux asuras ont un jour défié un grand guerrier de les affronter en duel à tour de rôle. Lorsqu'ils l'attaquèrent ensemble, il était tellement enragé qu'il en frappa un dans l'autre si fort qu'ils furent fusionnés à partir de ce jour-là.
+</p> 
+<p>Les Ahdukaits font partie de l'élite des guerriers Asuras, compensant ce qui leur manque en matière d'envoûtement par une méchanceté sans faille et une volonté unique d'infliger de la douleur.</p>
