--- a/data/feats/ancestry-09-NEl8G3SlwxOR9Zx1.htm
+++ b/data/feats/ancestry-09-NEl8G3SlwxOR9Zx1.htm
@@ -2,14 +2,12 @@ Name: Preemptive Reconfiguration
 Nom: Reconfiguration préemptive
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your body anticipates the blow.
 Avantage: Vous obtenez une résistance égale à votre niveau contre un unique coup infligeant des dégâts contondants, perforants ou tranchants.
------- Benefits and spoiler ----
-Avantage: Vous obtenez une résistance égale à votre niveau contre un unique coup infligeant des dégâts contondants, perforants ou tranchants.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <p><strong>Trigger</strong> You would take bludgeoning, piercing, or slashing damage.</p>
@@ -22,4 +20,4 @@ Avantage: Vous obtenez une résistance égale à votre niveau contre un unique c
 <hr />
 <p>Votre corps anticipe le coup. La zone d'impact se réorganise en un treillage tissé renforcé qui amortit l'attaque.</p>
 <p>Vous obtenez une résistance égale à votre niveau pour le type de dégât déclencheur, qui s'applique contre les dégâts déclencheurs.</p>
-<p>Si vous avez le don Poussière cristalline, vous pouvez utiliser Reconfiguration préemptive sans dépenser une utilisation de la réaction pour les besoins de calculer la limite d'utilisation du don. Au lieu de cela, l'utilisation est décomptée de votre nombre d'utilisations de Poussière cristalline par jour, comme si vous aviez utilisé ce don à la place.</p>
+<p>Si vous avez le don @Compendium[pf2e.feats-srd.Ewk7h9aQpKvy1RJo]{Poussière cristalline}, vous pouvez utiliser Reconfiguration préemptive sans dépenser une utilisation de la réaction pour les besoins de calculer la limite d'utilisation du don. Au lieu de cela, l'utilisation est décomptée de votre nombre d'utilisations de Poussière cristalline par jour, comme si vous aviez utilisé ce don à la place.</p>
