--- a/data/feats/ancestry-09-YfjuRHzqLFhLLgCc.htm
+++ b/data/feats/ancestry-09-YfjuRHzqLFhLLgCc.htm
@@ -1,9 +1,10 @@
 Name: Piercing Quills
-Nom: 
+Nom: Piquants perforants
 PrereqEN: |Spine Stabber
-PrereqFR: 
-État: aucune
+PrereqFR: Poignardeur de piquants
+État: libre
 
 ------ Description (en) ------
 <p>Your quills can dig particularly deep into the flesh of your opponents. Your quills unarmed attack deals [[/r 1d4 #persistent bleed]] persistent bleed damage on a critical hit.</p>
 ------ Description (fr) ------
+<p>Vos piquants peuvent s'enfoncer particulièrement profondément dans la chair de vos adversaires. Votre attaque à mains nues de piquants inflige [[/r 1d4 #saignement persistant]] dégâts de saignement persistant en cas de coup critique.</p>
