--- a/data/feats/ancestry-09-ux6kbsqRMsu9VHtn.htm
+++ b/data/feats/ancestry-09-ux6kbsqRMsu9VHtn.htm
@@ -1,8 +1,12 @@
 Name: Quill Spray
-Nom: 
+Nom: Projection de piquant
 PrereqEN: |quillcoat shisk or quill unarmed attack
-PrereqFR: 
-État: aucune
+PrereqFR: shisk à piquants ou attaque à mains nues de piquants
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Une fois par jour, vous pouvez projeter une salve de piquants sur vos adversaires.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -11,3 +15,8 @@ PrereqFR:
 <p>[[/r ceil(@details.level.value/2)d6 #piercing]]{Levelled} piercing damage</p>
 <p>[[/r ceil(@details.level.value/2) #persistent bleed]]{Levelled} persistent bleed damage</p>
 ------ Description (fr) ------
+<p><strong>Fréquence</strong> une fois par jour</p>
+<hr />
+<p>Vous pouvez lancer une salve de piquants sur vos adversaires. Vous projetez des piquants dans un cône de 9 m, infligeant [[/r 5d8 #perforants]] dégâts perforants. Chaque créature dans la zone doit faire un jet de sauvegarde de base contre le plus élevé entre votre DD de classe ou votre DD de sort. En cas d'échec critique, la créature subit également [[/r 5 #saignement persistant]] dégâts de saignement persistant. Au niveau 11 et à chaque niveau pair suivant, les dégâts perforants augmentent de 1d8 et les dégâts de saignement persistant augmentent de 1.</p>
+<p>dégâts perforants [[/r ceil(@details.level.value/2)d8 #perforants]]{selon le niveau} </p>
+<p>dégâts de saignement persistant [[/r ceil(@details.level.value/2) #saignement persistant]]{selon le niveau}</p>
