--- a/data/feats/ancestry-09-vtCrMziYxNyj8kP7.htm
+++ b/data/feats/ancestry-09-vtCrMziYxNyj8kP7.htm
@@ -2,14 +2,12 @@ Name: Celestial Wings
 Nom: Ailes célestes
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: With effort, you can call forth magical wings from your back, similar in appearance to those of your celestial forebears.
 Avantage: Vous obtenez une vitesse de Vol égale à votre Vitesse au sol pendant 10 minutes.
------- Benefits and spoiler ----
-Avantage: Vous obtenez une vitesse de Vol égale à votre Vitesse au sol pendant 10 minutes.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <hr />
@@ -18,5 +16,5 @@ Avantage: Vous obtenez une vitesse de Vol égale à votre Vitesse au sol pendant
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>En un effort, vous pouvez invoquer dans votre dos des ailes magiques, similaires en apparence à celles de vos ancêtres célestes.</p>
+<p>Avec un petit effort, vous pouvez invoquer dans votre dos des ailes magiques, similaires en apparence à celles de vos ancêtres célestes.</p>
 <p>Ces ailes restent pendant 10 minutes. Vous obtenez une vitesse de Vol égale à votre Vitesse au sol tant que vos ailes sont ainsi manifestées.</p>
