--- a/data/feats/ancestry-09-lbiFj4At5BxotaNY.htm
+++ b/data/feats/ancestry-09-lbiFj4At5BxotaNY.htm
@@ -2,14 +2,12 @@ Name: Dracomancer
 Nom: Dracomancien
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your inborn arcane power manifests as your exemplar's most time-honored spells.
-Avantage: Vous pouvez lancer un sort de niveau 1 et un sort de niveau 2 de votre modèle draconique  une fois par jour chacun.
------- Benefits and spoiler ----
-Avantage: Vous pouvez lancer un sort de niveau 1 et un sort de niveau 2 de votre modèle draconique  une fois par jour chacun.
+Avantage: Vous pouvez lancer un sort de niveau 1 et un sort de niveau 2 de votre modèle draconique une fois par jour chacun.
+
 ------ Description (en) ------
 <p>Your inborn arcane power manifests as your exemplar's most time-honored spells.</p>
 <p>Choose one 1st-level spell and one 2nd-level spell from those listed for a dragon spellcaster of your draconic exemplar's type (such as @Compendium[pf2e.spells-srd.4WAib3GichxLjp5p]{Alarm}, @Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Blur}, @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility}, and @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{True Strike} for a black dragon exemplar).</p>
@@ -17,4 +15,4 @@ Avantage: Vous pouvez lancer un sort de niveau 1 et un sort de niveau 2 de votre
 ------ Description (fr) ------
 <p>Votre pouvoir arcanique inné se manifeste sous la forme des sorts les plus couramment utilisés par votre modèle draconique.</p>
 <p>Choisissez un sort de niveau 1 et un sort de niveau 2 tirés de la liste d'un dragon lanceur de sort du type de votre modèle draconique tels que présentés dans le Bestiaire (tel que  @Compendium[pf2e.spells-srd.4WAib3GichxLjp5p]{Alarme}, @Compendium[pf2e.spells-srd.3JG1t3T4mWn6vTke]{Flou}, @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} et @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{Coup au but} pour un modèle dragon noir).</p>
-<p>Vous pouvez Lancer chacun de ces sorts une fois par jour comme des sorts arcaniques innés. Vous devenez qualifié en jets d'attaque de sort arcanique et en DD des sorts et votre caractéristique clé d'incantation est le Charisme.</p>
+<p>Vous pouvez Lancer chacun de ces sorts une fois par jour comme des sorts arcaniques innés. Vous devenez qualifié en jets d'attaque de sort arcanique et en DD des sorts et votre caractéristique essentielle d'incantation est le Charisme.</p>
