--- a/data/feats/ancestry-09-o1LhDmwymrpEy1u2.htm
+++ b/data/feats/ancestry-09-o1LhDmwymrpEy1u2.htm
@@ -2,14 +2,12 @@ Name: Riptide
 Nom: Contre-courant
 PrereqEN: |Drag Down|expert in Athletics
 PrereqFR: Tirer vers le bas|expert en Athlétisme
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Drag a grabbed creature into nearby water
 Avantage: Vous pouvez emporter une créature que vous agrippez dans l'eau.
------- Benefits and spoiler ----
-Avantage: Vous pouvez emporter une créature que vous agrippez dans l'eau.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are within 10 feet of water at least 10 feet deep, and your Speed is sufficient to reach the water in one Stride.</p>
 <p><strong>Trigger</strong> You successfully @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Grapple} a creature of the same size as you or smaller.</p>
@@ -17,6 +15,6 @@ Avantage: Vous pouvez emporter une créature que vous agrippez dans l'eau.
 <p>You Stride up to 10 feet to enter the water, bringing the @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed} creature with you into the water.</p>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous êtes à 3 mètres d'une eau d'au moins 3 mètres de profondeur et votre vitesse est suffisante pour atteindre l'eau en Marchant rapidement.</p>
-<p><strong>Déclencheur</strong> Vous réussissez à saisir une créature de la même taille que vous ou plus petite.</p>
+<p><strong>Déclencheur</strong> Vous réussissez à Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Saisir} une créature de la même taille que vous ou plus petite.</p>
 <hr />
 <p>Vous Marchez rapidement de 3 mètres pour rentrer dans l'eau, emportant la créature @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Agrippée} avec vous dans l'eau.</p>
