--- a/data/feats/ancestry-01-5VWItcyt3Mx6mbSK.htm
+++ b/data/feats/ancestry-01-5VWItcyt3Mx6mbSK.htm
@@ -2,7 +2,7 @@ Name: Grippli Lore
 Nom: Connaissance des gripplis
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
