--- a/data/feats/ancestry-01-Hey5rucsel7apOOi.htm
+++ b/data/feats/ancestry-01-Hey5rucsel7apOOi.htm
@@ -2,7 +2,7 @@ Name: Goloma Courage
 Nom: Courage goloma
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
