--- a/data/feats/ancestry-01-vNDCXpumBONpk5JO.htm
+++ b/data/feats/ancestry-01-vNDCXpumBONpk5JO.htm
@@ -2,7 +2,7 @@ Name: Goloma Lore
 Nom: Connaissance des golomas
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
