--- a/data/feats/ancestry-09-YfjuRHzqLFhLLgCc.htm
+++ b/data/feats/ancestry-09-YfjuRHzqLFhLLgCc.htm
@@ -4,6 +4,10 @@ PrereqEN: |Spine Stabber
 PrereqFR: Poignardeur de piquants
 État: libre
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: En cas de coup critique, votre attaque de piquants inflige 1d4 dégâts de saignement.
+
 ------ Description (en) ------
 <p>Your quills can dig particularly deep into the flesh of your opponents. Your quills unarmed attack deals [[/r 1d4 #persistent bleed]] persistent bleed damage on a critical hit.</p>
 ------ Description (fr) ------
