--- a/data/feats/ancestry-01-95amaXDoWKxdIXqI.htm
+++ b/data/feats/ancestry-01-95amaXDoWKxdIXqI.htm
@@ -2,11 +2,11 @@ Name: Ceremony of the Evened Hand (Branch)
 Nom: Cérémonie de la main levée (branche)
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: Vous obtenez une attaques à mains nues de griffe qui infligent 1d4 dégâts tranchants
+Avantage: Vous obtenez une attaque à mains nues de branche qui infligent 1d6 dégâts contondants
 
 ------ Description (en) ------
 <p>You have cultivated your exoskeleton’s form for close combat, using knots, whorls, and reinforced branches. When you select this feat, you gain a branch unarmed attack that deals 1d6 bludgeoning damage and has the backswing trait. This unarmed attacks is in the brawling weapon group and uses one of your hands.</p>
