--- a/data/feats/ancestry-13-1WPKV2sInXtiUaeG.htm
+++ b/data/feats/ancestry-13-1WPKV2sInXtiUaeG.htm
@@ -2,14 +2,12 @@ Name: Flame Jump
 Nom: Saut enflammé
 PrereqEN: |Emberkin
 PrereqFR: Enfant de braise
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your peri lineage has opened your mind to fire's raw, purging essence.
 Avantage: Vous pouvez vous téléporter en passant d'un feu à un autre.
------- Benefits and spoiler ----
-Avantage: Vous pouvez vous téléporter en passant d'un feu à un autre.
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <hr />
