--- a/data/feats/ancestry-05-PWKFdaNghx1YMKlA.htm
+++ b/data/feats/ancestry-05-PWKFdaNghx1YMKlA.htm
@@ -2,7 +2,7 @@ Name: Hunter's Fangs
 Nom: Crocs du chasseur
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
