--- a/data/feats/ancestry-13-LxAEF9VPwUVttA0F.htm
+++ b/data/feats/ancestry-13-LxAEF9VPwUVttA0F.htm
@@ -1,13 +1,14 @@
 Name: Delver
-Nom: 
+Nom: Plongeur
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous obtenez une vitesse de creusement.
 
 ------ Description (en) ------
 <p>Subterranean life taught you to swim through the ground like water. You gain a burrow Speed of 10 feet through loose soil or dirt.</p>
 ------ Description (fr) ------
+<p>La vie souterraine vous a enseigné à nager à travers le sol comme à travers l'eau. Vous obtenez une vitesse de creusement de 3 m à travers le sol meuble ou la terre.</p>
