--- a/data/feats/ancestry-13-bi77bT9uyAmJXVed.htm
+++ b/data/feats/ancestry-13-bi77bT9uyAmJXVed.htm
@@ -2,14 +2,12 @@ Name: Truespeech
 Nom: Langage universel
 PrereqEN: |Angelkin
 PrereqFR: Type angélique
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: It is paramount that you are understood and you understand others; language need not impede your message.
-Avantage: Vous pouvez lancer Don des langues une fois sur vous-même et obtenez un bonus de circonstances de +1 en Diplomatie avec les créatures dont vous partagez déjà la langue.
------- Benefits and spoiler ----
-Avantage: Vous pouvez lancer Don des langues une fois sur vous-même et obtenez un bonus de circonstances de +1 en Diplomatie avec les créatures dont vous partagez déjà la langue.
+Avantage: Vous pouvez lancer Don des langues comme un sort divin inné de niveau 5 une fois par jour
+
 ------ Description (en) ------
 <p>It is paramount that you are understood and you understand others; language need not impede your message.</p>
 <p>You can cast @Compendium[pf2e.spells-srd.SwUiVavHKMWG7t5K]{Tongues} as a 5th-level divine innate spell once per day on yourself only.</p>
