--- a/data/feats/ancestry-17-Dxac0mgye7EFFVou.htm
+++ b/data/feats/ancestry-17-Dxac0mgye7EFFVou.htm
@@ -2,14 +2,12 @@ Name: Radiate Glory
 Nom: Irradier la gloire
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your inherent glory radiates into the world with all the divine power of the celestial planes for 1 minute.
 Avantage: Votre gloire vous masque ou vous cache aux yeux de vos adversaires durant une minute au maximum.
------- Benefits and spoiler ----
-Avantage: Votre gloire vous masque ou vous cache aux yeux de vos adversaires durant une minute au maximum.
+
 ------ Description (en) ------
 <p>Your inherent glory radiates into the world with all the divine power of the celestial planes for 1 minute.</p>
 <p>Any creature that can see you while you Radiate Glory must attempt a Will saving throw against your class DC or spell DC, whichever is higher. The creature then becomes temporarily immune to this effect for 24 hours.</p>
@@ -25,4 +23,4 @@ Avantage: Votre gloire vous masque ou vous cache aux yeux de vos adversaires dur
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> Vous êtes @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} à la créature pendant 1 round par la lumière étincelante, mais ne pouvez utiliser cet état pour vous Cacher, comme habituellement lorsque votre localisation est évidente.</p>
 <p><strong>Échec</strong> Comme en cas de succès,  sauf que vous êtes masqué à la créaure tant que votre gloire irradie.</p>
-<p><strong>Échec critique</strong> Vous êtes @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} à la créature tant que votre gloire irradie, perdu parmi la couronne radieuse de votre présence. Votre position générale est toujours évidente, de sorte que vous ne pouvez l'utilisez pour Être furtif.</p>
+<p><strong>Échec critique</strong> Vous êtes @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} à la créature tant que votre gloire irradie, perdu au sein de la couronne radieuse de votre présence. Votre position générale est toujours évidente, de sorte que vous ne pouvez l'utiliser pour Être furtif.</p>
