--- a/data/pathfinder-bestiary-3/8lQf8PNcJvxwmqLd.htm
+++ b/data/pathfinder-bestiary-3/8lQf8PNcJvxwmqLd.htm
@@ -1,6 +1,6 @@
 Name: Kirin
-Nom: 
-État: aucune
+Nom: Kirine
+État: libre
 
 ------ Description (en) ------
 <p>The rare and majestic antlered beast known as a kirin supposedly appear only in times of peace and prosperity or during the birth or death of a great sage. Thus, encountering a kirin is a sign of great fortune, success, and prosperity to come. Conversely, finding a kirin's corpse or witnessing their death is a portent of tragedy and misfortune. A kirin's song always precedes the sighting of one of these graceful creatures, a sound often mistaken for wind chimes gently dancing in the breeze.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>As creatures that treasure life, kirin don't consume flesh, and they take great care not to kill even a single insect beneath their cloven hooves. They're the embodiment of peace yet will quickly strike down evil with a powerful thrust of their horns, knowing that their acts preserve the peace for those who might otherwise come to harm.</p>
 <p>Legends tell of particularly pious champions who have persuaded kirin to partner with them as mounts, though accomplishing such a feat is even rarer than the kirin.</p>
 ------ Description (fr) ------
+<p>La rare et majestueuse bête à bois connue sous le nom de Kirine est censée n'apparaître qu'en période de paix et de prospérité ou lors de la naissance ou de la mort d'un grand sage. Ainsi, la rencontre d'un Kirine est un signe de bonne fortune, de succès et de prospérité à venir. À l'inverse, trouver le cadavre d'un Kirine ou assister à sa mort est un présage de tragédie et de malheur. Le chant d'un Kirine précède toujours l'observation de l'une de ces gracieuses créatures, un son souvent confondu avec des carillons de vent qui dansent doucement dans la brise.</p>
+<p>Les Kirines sont des créatures chimériques dotées du corps d'un cerf, de la queue d'un bœuf, de deux cornes au sommet de leur tête, ainsi que des écailles et de la coloration vibrante d'un dragon. Leurs crinières et leurs barbes majestueuses flottent constamment au gré de la brise, même les jours sans vent, et apparaissent parfois enveloppées de flammes.</p>
+</p>Créatures qui chérissent la vie, les Kirines ne consomment pas de chair et prennent grand soin de ne pas tuer le moindre insecte sous leurs sabots fendus. Ils sont l'incarnation de la paix et pourtant, ils s'empresseront de terrasser le mal d'un puissant coup de cornes, sachant que leurs actes préservent la paix pour ceux qui, autrement, pourraient leur nuire.</p>
+<p>Les légendes racontent que des champions particulièrement pieux ont persuadé des Kirine de s'associer à eux comme montures, bien qu'accomplir un tel exploit soit encore plus rare que les Kirine.</p>
