--- a/data/pathfinder-bestiary-3/8S088wbZjUhx6IB7.htm
+++ b/data/pathfinder-bestiary-3/8S088wbZjUhx6IB7.htm
@@ -1,9 +1,12 @@
 Name: Khravgodon
-Nom: 
-État: aucune
+Nom: Khravgodon
+État: libre
 
 ------ Description (en) ------
 <p>Few creatures have survived as long and in as many environments as the opossum.</p>
 <hr />
 <p>Few creatures can shrug off an ankhrav's acid and crunch its chitin like a khravgodon.</p>
 ------ Description (fr) ------
+<p>Peu de créatures ont survécu aussi longtemps et dans autant d'environnements que l'opossum.</p>
+<hr />
+<p>Peu de créatures peuvent se défaire de l'acide d'un Ankhrav et croquer sa chitine ; un Khravgodon peut le faire.</p>
