--- a/data/pathfinder-bestiary-3/0A2XLkvOzDMOjC6Q.htm
+++ b/data/pathfinder-bestiary-3/0A2XLkvOzDMOjC6Q.htm
@@ -1,7 +1,6 @@
 Name: Clockwork Mage
-Nom: Automate Mage
-État: changé
-État d'origine: libre
+Nom: Automate-mage
+État: libre
 
 ------ Description (en) ------
 <p>Intricate, complex machines, clockworks are built with care by highly skilled engineers. Though their creation involves some amount of magic, they're primarily mechanical, packed with precision-tuned gears and springs working in concert.</p>
@@ -9,7 +8,7 @@ Nom: Automate Mage
 <hr />
 <p>A clockwork mage is a lethal blend of magic and machinery. Each of these clockworks is imbued with an arcane stone at its core that powers spells through the wand embedded in its chest.</p>
 ------ Description (fr) ------
-<p>Machines inextricable et complexes, les automates sont construits avec soin par des ingénieurs hautement qualifiés. Bien que leur création fasse appel à une certaine dose de magie, ils sont avant tout mécaniques, composées d'engrenages et de ressorts réglés avec précision qui travaillent de concert.</p> 
+<p>Machines inextricables et complexes, les automates sont construits avec soin par des ingénieurs hautement qualifiés. Bien que leur création fasse appel à une certaine dose de magie, ils sont avant tout mécaniques, composées d'engrenages et de ressorts réglés avec précision qui travaillent de concert.</p> 
 <p>Le ressort principal robuste d'un mécanisme d'automate doit être remonté pour fournir l'énergie nécessaire au fonctionnement de l'appareil. Certains travaux d'automate plus importants contiennent une série de ressorts pour chaque membre qui doivent être remontés chacun. L'artisan d'un mécanisme d'automate crée pendant la construction du mécanisme une clé métallique unique. Pour remonter le mécanisme d'automate, il faut généralement insérer la clé dans le dos de la machine et la tourner dans le sens des aiguilles d'une montre. Les plus grands automates nécessitent une plus grande force pour faire tourner la clé. Elles sont généralement plus grandes pour permettre un plus grand couple de rotation. La programmation d'un mouvement d'automate nécessite à la fois la clé et les connaissances nécessaires pour régler le programme correctement, une information généralement réservée au créateur ou au propriétaire de l'automate.
 <hr />
-<p>Un automate Mage est un mélange mortel de magie et de machines. Chaque automate est imprégné d'une pierre arcanique en son cœur qui alimente les sorts par l'intermédiaire de la baguette intégrée à sa poitrine.</p>
+<p>Un Automate-mage est un mélange mortel de magie et de machines. Chaque automate est imprégné d'une pierre arcanique en son cœur qui alimente les sorts par l'intermédiaire de la baguette intégrée à sa poitrine.</p>
