--- a/data/pathfinder-bestiary-3/OPRuZ1cEuKkJGPMV.htm
+++ b/data/pathfinder-bestiary-3/OPRuZ1cEuKkJGPMV.htm
@@ -1,6 +1,6 @@
 Name: Earth Wisp
-Nom: 
-État: aucune
+Nom: Luciole de terre
+État: libre
 
 ------ Description (en) ------
 <p>Wisps are tiny elemental beings that emerged during the creation of the Elemental Planes. The first wisps roamed the Inner Sphere in shifting symphonies that traded members with their every meeting. These symphonies of free wisps created music out of their combined resonances, but when the evil Elemental Lords realized the value of the wisps' resonance, they captured whole symphonies for use as servants.</p>
@@ -9,3 +9,8 @@ Nom:
 <hr />
 <p>Earth wisps are rolling spheres of rock, mud, and leaves, perpetually humming with low, rumbling energy. They're timid and aloof, but fiercely loyal to those they know and trust.</p>
 ------ Description (fr) ------
+<p>Les lucioles sont de minuscules êtres élémentaires qui sont apparus lors de la création des plans élémentaires. Les premières lucioles parcouraient la Sphère Intérieure en symphonies changeantes qu'échangeaient des membres à chacune de leurs rencontres. Ces symphonies de lucioles libres créaient de la musique à partir de leurs résonances combinées, mais lorsque les méchants seigneurs élémentaires ont réalisé la valeur de la résonance des lucioles, ils ont capturé des symphonies entières pour les utiliser comme serviteurs.</p> 
+<p>Les lucioles s'accordent entre eux et avec ceux dont ils s'entourent. Cette syntonisation en fait des alliés naturellement solidaires. Les lucioles libres parcourent encore la Sphère Intérieure et le Plan Matériel, mais ils sont généralement timides et se cachent des étrangers. Cependant, ils offrent volontiers leurs services à ceux qui leur témoignent de la gentillesse. Ils se trouvent particulièrement attirés par les lanceurs de sorts qui pratiquent la magie élémentaire ; ces lucioles observent généralement de loin, mais s'approchent parfois de ceux qui semblent sûrs pour devenir des familiers ou des camarades.</p>
+<p>Les lucioles libres qui se trouvent entre eux deviennent proches presque immédiatement. Ils sont particulièrement excités lorsqu'ils trouvent des lucioles élémentaires autres que le leur, ne montrant aucunement l'animosité que certains élémentaires manifestent envers d'autres types. Au lieu de cela, ils se joignent dans une danse excitée, émettant des résonances qui font faiblement écho aux symphonies des jours anciens.</p>
+<hr />
+<p>Les lucioles de terre sont des sphères roulantes de roche, de boue et de feuilles, qui bourdonnent perpétuellement d'une énergie basse et grondante. Ils sont timides et distants, mais farouchement fidèles à ceux qu'ils connaissent et en qui ils ont confiance.</p>
