--- a/data/pathfinder-bestiary-3/V9SxfxUgljJR9xx5.htm
+++ b/data/pathfinder-bestiary-3/V9SxfxUgljJR9xx5.htm
@@ -1,6 +1,6 @@
 Name: Hatred Siktempora
-Nom: 
-État: aucune
+Nom: Siktempora de la haine
+État: libre
 
 ------ Description (en) ------
 <p>In the Dimension of Time, intense emotions are more than just ethereal feelings. They accumulate over time, from things like the critical mass of emotion caused by a historic event or a settlement passing down a powerful sentiment for generations. These accretions eventually give birth to siktemporas. Each siktempora feels, with all their being, a singular intense emotion linked to the circumstances that spawned them. A rare few, however, are created when an emotionally invested creature attempts to travel to the Dimension of Time or interferes with the flow of time, which can create paradoxes or manipulate past events.</p>
