--- a/data/pathfinder-bestiary-3/zGco5QmokZpFgLes.htm
+++ b/data/pathfinder-bestiary-3/zGco5QmokZpFgLes.htm
@@ -1,6 +1,6 @@
 Name: Grimple
-Nom: 
-État: aucune
+Nom: Grimple (Gremlin)
+État: libre
 
 ------ Description (en) ------
 <p>Gremlins arose long ago in the First World, living embodiments of nature's ability to wear away, erode, and decompose. On the Material Plane, their encounters with mortal civilizations twisted them into creatures devoted to chaos, sabotage, and traps, each variety specializing in a particular brand of mayhem.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>Even more than most gremlins, grimples resent the trappings of civilization: inn common rooms with their rowdy singalongs, livery yards with their whinnying horses, church steeples with their clanging bells. Grimples live to spoil these conventions, dropping tavern signs on patrons, urinating in rain barrels, and opening stable doors. When all else fails, they literally vomit their disdain on passersby.</p>
 <p>Grimples resemble humanoid, mange-ridden opossums, with boar-like tusks that aid them in rooting through garbage heaps for food. They are agile climbers who glide from eave to eave on the loose flaps of skin between their limbs. Savvy gremlin-hunters know to look for the skin flakes and fur grimples shed from their parasite-infested hides.</p>
 ------ Description (fr) ------
+</p>Les Gremlins sont apparus il y a longtemps dans le Premier Monde, incarnations vivantes de la capacité de la nature à s'user, s'éroder et se décomposer. Sur le Plan Matériel, leurs rencontres avec des civilisations mortelles les ont transformés en créatures dévouées au chaos, au sabotage et aux pièges, chaque variété se spécialisant dans une marque particulière de pagaille.</p>
+<hr />
+<p>Encore plus que la plupart des gremlins, les Grimples n'aiment pas les pièges de la civilisation : les salles communes des auberges avec leurs chants tapageurs, les écuries avec leurs chevaux qui hennissent, les clochers des églises avec leurs cloches qui sonnent. Les Grimples s'emploient à gâcher ces conventions en jetant des enseignes de taverne sur les clients, en urinant dans les tonneaux de pluie et en ouvrant les portes des écuries. Quand tout le reste échoue, ils vomissent littéralement leur dédain sur les passants.</p> 
+<p>Les Grimples ressemblent à des opossums humanoïdes atteints de gale, avec des défenses semblables à celles des sangliers qui les aident à fouiller les tas d'ordures pour trouver de la nourriture. Ce sont des grimpeurs agiles qui glissent d'un avant-toit à l'autre sur les lambeaux de peau détachés entre leurs membres. Les chasseurs de gremlin avertis savent qu'il faut rechercher les lambeaux de peau et les grimpettes de fourrure qui se détachent de leurs peaux infestées de parasites.</p>
