--- a/data/pathfinder-bestiary-3/UxiwQ2Nmvfk9Q9tC.htm
+++ b/data/pathfinder-bestiary-3/UxiwQ2Nmvfk9Q9tC.htm
@@ -1,9 +1,12 @@
 Name: Shaukeen
-Nom: 
-État: aucune
+Nom: Shaukéen (Asura)
+État: libre
 
 ------ Description (en) ------
 <p>Asuras are, above all, proof that the gods are not infallible. These fiends arose as physical manifestations of divine accidents, taking form when the gods themselves stumbled and blasphemed on a cosmic scale. As a result of their own divine genesis, an asura loves above all to undo the workings of the divine. They eagerly travel to the Material Plane, seeking out temples, congregations of faithful worshippers, and religious orders of all stripes to sow doubt and destroy what the gods seek to build.</p>
 <hr />
 <p>Perhaps the most perverse asuras of them all, shaukeens particularly delight in causing the downfall of those who give them succor, shelter, and most of all, schooling. Many a teacher has come across a shaukeen disguised as a small child of exceptional talents or curiosity and taken them under their wing, only to be beguiled into ruin. This diminutive asura's cleverness is disproportionate to their size; they ask probing questions and coax their prey into decisions that lead to heresy, furthering the collapse of order and decency. When the world turns on the shaukeen's mentor, the asura is gone-but not very far, for they love hiding unseen and watching the torment and destruction of their mentors.</p>
 ------ Description (fr) ------
+<p>Les Asuras sont, avant tout, la preuve que les dieux ne sont pas infaillibles. Ces monstres sont apparus comme des manifestations physiques d'accidents divins, prenant forme lorsque les dieux eux-mêmes ont trébuché et blasphémé à l'échelle cosmique. En raison de sa propre genèse divine, l'Asura aime par-dessus tout défaire le travail des dieux. Ils se rendent avec empressement dans le Plan Matériel, à la recherche de temples, de congrégations d'adorateurs fidèles et d'ordres religieux de tous bords, pour semer le doute et détruire ce que les dieux cherchent à construire.</p>
+<hr />
+<p>Peut-être les Asuras les plus pervers de tous, les Shaukéens se plaisent particulièrement à causer la chute de ceux qui leur apportent du secours, un abri, et surtout, une éducation. Nombreux sont les enseignants qui ont croisé un Shaukéen déguisé en petit enfant aux talents ou à la curiosité exceptionnels et l'ont pris sous leur aile, pour finalement le mener à la ruine. L'intelligence de ces petits Asuras est disproportionnée par rapport à leur taille ; ils posent des questions approfondies et amènent leurs proies à prendre des décisions qui mènent à l'hérésie, favorisant ainsi l'effondrement de l'ordre et de la décence. Lorsque le monde se retourne contre le mentor du Shaukéen, l'Asura est parti - mais pas très loin, car ils aiment se cacher sans être vus et observer les tourments et la destruction de leurs mentors.</p>
