--- a/data/pathfinder-bestiary-3/9SW7NWlTisAjNwAu.htm
+++ b/data/pathfinder-bestiary-3/9SW7NWlTisAjNwAu.htm
@@ -1,9 +1,12 @@
 Name: Nyktera
-Nom: 
-État: aucune
+Nom: Nyktera (Sprite)
+État: libre
 
 ------ Description (en) ------
 <p>Tiny winged fey with intense curiosity and adventurous spirits, sprites often find themselves in risky situations and shenanigans belying their stature. While their pixie and grig cousins are most common, numerous additional types of sprites were born from the faerie realm of the First World. These include draxies, melixies, and nykteras, each of which shares commonalities with a different animal or magical creature.</p>
 <hr />
 <p>Nykteras, or bat sprites, are gentle sprites known for their affectionate nature and incredible hospitality. Nykteras share features with bats, but the type of bat varies by location, as nykteras tend to form small colonies in locations with bats similar to their own nature. A nyktera's sense of hospitality is such that they're willing to share with any who need it, even bitter foes. However, violating a nyktera's hospitality is one of their greatest taboos, inviting rare anger and retribution from the nyktera who was wronged, as well as their large extended family.</p>
 ------ Description (fr) ------
+<p>Petits feys ailés à la curiosité intense et à l'esprit aventureux, les Sprites se retrouvent souvent dans des situations risquées et des magouilles compliquées, démentant leur stature. Si leurs cousins Pixie et Grig sont les plus courants, de nombreux autres types de Sprites sont nés du royaume des fées du Premier Monde. Il s'agit notamment des Draxies, des Melixies et des Nykteras, qui ont chacun des points communs avec un animal ou une créature magique différente.</p>
+<hr />
+<p>Les Nykteras, ou sprites chauves-souris, sont des sprites doux connus pour leur nature affectueuse et leur incroyable hospitalité. Les Nykteras partagent des caractéristiques avec les chauves-souris, mais le type de chauve-souris varie selon l'endroit, car les Nykteras ont tendance à former de petites colonies dans les endroits où se trouvent des chauves-souris semblables à leur propre nature. Le sens de l'hospitalité des Nykteras est tel qu'ils sont prêts à partager avec quiconque en a besoin, même avec des ennemis acharnés. Cependant, violer l'hospitalité d'un Nyktera est l'un de leurs plus grands tabous, invitant une rare colère et des représailles de la part du Nyktera lésé, ainsi que de sa grande famille élargie.</p>
