--- a/data/feats/bonus-00-rWiddU8fHl0TraoN.htm
+++ b/data/feats/bonus-00-rWiddU8fHl0TraoN.htm
@@ -1,8 +1,8 @@
 Name: Gnoll Lore
-Nom: 
+Nom: Connaissance des gnolls
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
