--- a/data/pathfinder-bestiary-3/9uP6Dfv53H4Fa32c.htm
+++ b/data/pathfinder-bestiary-3/9uP6Dfv53H4Fa32c.htm
@@ -1,6 +1,6 @@
 Name: Consonite Choir
-Nom: 
-État: aucune
+Nom: Choeur consonite
+État: libre
 
 ------ Description (en) ------
 <p>Floods of crystalline blades called consonite choirs surge through the caverns and tunnels of the Plane of Earth. Although their resonant chimes can be among the most beautiful music in the planes, those who intrude on their territory are instead confronted with a bone-shaking wall of sound and a barrage of razor-sharp crystals.</p>
@@ -9,3 +9,8 @@ Nom:
 <p>Consonite choirs who leave the Plane of Earth, either through natural portals or by answering the calls of powerful rituals, often find the open spaces of other planes more to their liking. They enjoy the sensation of high winds moving through their chimes and search tirelessly for skilled performance partners. Crueler fates trap other choirs-more powerful beings might mystically bind them to service or bully them into becoming living trophies.</p>
 <p>Over years of movement, the individual crystal blades of a choir naturally chip and break down. In their native caverns, consonite choirs can easily find new members. Trapped elsewhere, they must rely on others for replacement blades or eventually fall into torpor.</p>
 ------ Description (fr) ------
+<p>Des flots de lames cristallines appelés Chœurs consonites déferlent dans les cavernes et les tunnels du Plan de la Terre. Bien que leurs carillons résonnants puissent compter parmi les plus belles musiques des plans, ceux qui s'immiscent sur leur territoire sont au contraire confrontés à un mur de sons à faire trembler les os et à un barrage de cristaux tranchants comme des rasoirs.</p> 
+<p>Les lames se forment naturellement, c'est l'un des nombreux types de cristaux merveilleux du Plan de la Terre. Les stalactites de consonite aux arêtes de rasoir bourdonnent et carillonnent en même temps que le mouvement de broyage du plan. Lorsque de grandes collections de ces cristaux commencent à communiquer entre eux par leur chant commun, ils s'éveillent en une sorte de collectif musical.</p>
+<p>Finalement, les chants des chœurs consonites deviennent suffisamment forts et complexes pour secouer ces colonies de leurs amarres de pierre et les libérer pour explorer le Plan de la Terre. Les chœurs consonites préfèrent généralement rester près de leur lieu de ponte, mais peuvent être contraints de se produire dans les maisons de riches Shaitans ou de servir d'autres créatures puissantes de la Terre. Ils quittent volontiers le confort de leurs maisons pour chasser les Xorns détestés, qui apprécient la saveur de leurs frères consonites immobiles.</p> 
+<p>Les chœurs consonites qui quittent le plan de la Terre, soit par des portails naturels, soit en répondant aux appels de puissants rituels, trouvent souvent les grands espaces des autres plans plus à leur goût. Ils apprécient la sensation des vents violents qui se déplacent dans leurs carillons et recherchent inlassablement des partenaires de performance compétents. Des destins plus cruels piègent d'autres chœurs - des êtres plus puissants pourraient les lier mystiquement à leur service ou les intimider pour qu'ils deviennent des trophées vivants.</p> 
+<p>Au fil des années de mouvement, les lames de cristal individuelles d'un chœur s'ébrèchent et se brisent naturellement. Dans leurs cavernes natales, les chœurs consonites peuvent facilement trouver de nouveaux membres. Piégés ailleurs, ils doivent compter sur les autres pour obtenir des lames de remplacement ou finir par tomber dans la torpeur.</p>
