--- a/data/pathfinder-bestiary-3/JD5sD7vwwlU2DwJI.htm
+++ b/data/pathfinder-bestiary-3/JD5sD7vwwlU2DwJI.htm
@@ -1,7 +1,8 @@
 Name: Angazhani
-Nom: 
-État: aucune
+Nom: Angazhani
+État: libre
 
 ------ Description (en) ------
 <p>Angazhanis lurk in the depths of the world's jungles, where these sapient, four-armed apes prey on any creatures they deem lesser than themselves. They're purportedly the divine minions of Angazhan, demon lord of apes. While many angazhanis do worship this foul god, scarce evidence exists to support their claim to fiendish heritage. Jungle-dwelling people know well to steer clear of suspected angazhani territories; angazhanis of such areas don't slaughter outright, often capturing trespassers to serve as slaves or as living sacrifices in heinous rituals.</p>
 ------ Description (fr) ------
+<p>Les Angazhanis se cachent dans les profondeurs des jungles du monde, où ces singes doués de conscience à quatre bras s'attaquent à toutes les créatures qu'ils jugent inférieures à eux. Ils sont censés être les serviteurs divins d'Angazhan, le seigneur démoniaque des singes. Bien que de nombreux Angazhanis vénèrent ce dieu immonde, il existe peu de preuves de leur héritage démoniaques. Les habitants de la jungle savent bien qu'il faut se tenir à l'écart des territoires suspects d'Angazhani ; les Angazhanis de ces régions ne massacrent pas purement et simplement, mais capturent souvent les intrus pour les servir d'esclaves ou de sacrifices vivants dans des rituels odieux.</p>.
