--- a/data/pathfinder-bestiary-3/an7tww93Y4pQ8HP6.htm
+++ b/data/pathfinder-bestiary-3/an7tww93Y4pQ8HP6.htm
@@ -1,7 +1,8 @@
 Name: Baykok
-Nom: 
-État: aucune
+Nom: Baykok
+État: libre
 
 ------ Description (en) ------
 <p>A baykok is the restless remnant of a warrior or hunter, cast out for evil acts and cursed to forever soar through the sky far from its home, unable to ever set foot on the ground again. The creature's despairing, lonely cries at night are audible for miles across the wilderness it haunts. Jealous rage drives it to hunt isolated humanoids, especially warriors and hunters who remind it of the life it once had and squandered. A baykok's invisible arrows carry its soul-freezing loneliness, and its envious touch can steal a helpless victim's vitality.</p>
 ------ Description (fr) ------
+<p>Un Baykok sont les vestiges sans repos d'un guerrier ou d'un chasseur, chassés pour des actes maléfiques et maudits pour s'envoler à jamais dans le ciel, loin de chez eux, sans jamais pouvoir remettre les pieds sur terre. La nuit, les cris de désespoir et de solitude de la créature sont audibles à des kilomètres à la ronde dans les régions sauvages qu'elle hante. Une rage jalouse le pousse à chasser les humanoïdes isolés, en particulier les guerriers et les chasseurs qui lui rappellent la vie qu'il a eue et qu'il a gaspillée. Les flèches invisibles d'un Baykok portent sa solitude qui glace l'âme, et son toucher envieux peut voler la vitalité d'une victime sans défense.</p>
