--- a/data/pathfinder-bestiary-3/AlLBsYO3ax9OQzAK.htm
+++ b/data/pathfinder-bestiary-3/AlLBsYO3ax9OQzAK.htm
@@ -1,6 +1,6 @@
 Name: Tupilaq
-Nom: 
-État: aucune
+Nom: Tupilaq
+État: libre
 
 ------ Description (en) ------
 <p>A tupilaq is an artistically crafted construct carved from animal bones (typically&nbsp;whale or walrus) and imbued with the express purpose of eviscerating its creator's&nbsp;enemies. A tupilaq manifests from hateful magic-a thing that can be created&nbsp;only by someone who believes they were grievously wronged. When a terrible,&nbsp;unforgivable crime is committed against someone with great skill at carving and&nbsp;who has knowledge of the proper ritual, the aggrieved can channel their grief and&nbsp;hate through whispered incantations to bring a tupilaq to life.</p>
