--- a/data/feats/class-06-AWd7uZBfba5mNXeT.htm
+++ b/data/feats/class-06-AWd7uZBfba5mNXeT.htm
@@ -1,9 +1,10 @@
 Name: Syu Tak-nwa's Deadly Hair
-Nom: 
+Nom: Cheveux mortel de Syu Tak-nwa
 PrereqEN: |Living Hair
-PrereqFR: 
-État: aucune
+PrereqFR: Cheveux vivants
+État: libre
 
 ------ Description (en) ------
 <p>Your hair unarmed attack deals 1d6 bludgeoning damage and gains the grapple trait.</p>
 ------ Description (fr) ------
+<p>Votre attaque à mains nues de cheveux inflige 1d6 dégâts contondants et obtient le trait saisir.</p>
