dons de classe non traduits

--- a/data/feats/class-06-Jwq5o13uZF3ooln1.htm
+++ b/data/feats/class-06-Jwq5o13uZF3ooln1.htm
@@ -1,12 +1,12 @@
 Name: Jellyfish Stance
-Nom: 
+Nom: Posture de la méduse
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous obtenez une attaque de tentacules urticants infligeants 1d8 dégâts tranchants
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored.</p>
@@ -14,3 +14,8 @@ Avantage:
 <p>While in Jellyfish Stance, you gain a +2 circumstance bonus to Reflex saves and on checks to @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{Escape} and @Compendium[pf2e.actionspf2e.kMcV8e5EZUxa6evt]{Squeeze}.</p>
 <p>@Compendium[pf2e.feat-effects.pkcr9w5x6bKzl3om]{Stance: Jellyfish Stance}</p>
 ------ Description (fr) ------
+<p><strong>Conditions</strong> Vous ne portez pas d'armure.</p>
+<hr />
+<p>Vous relâchez votre posture et détendez vos articulations, vous permettant de vous déplacer avec une incroyable fluidité. Vous pouvez porter des attaques de tentacules urticantes qui infligent 1d8 dégâts tranchants. Ces attaques sont dans le groupe pugilat et possèdent les trait finesse, non létal, allonge et à mains nues.</p>
+<p>Tant que vous êtes dans la posture de la méduse, vous obtenez un bonus de circonstance de +2 aux jets de Réflexes et sur les tests pour s'@Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{Échapper} et @Compendium[pf2e.actionspf2e.kMcV8e5EZUxa6evt]{Se faufiler}.</p>
+<p>@Compendium[pf2e.feat-effects.pkcr9w5x6bKzl3om]{Posture : Posture de la méduse}</p>
