--- a/data/feats/class-02-QkP007ESTWtw7UQG.htm
+++ b/data/feats/class-02-QkP007ESTWtw7UQG.htm
@@ -1,14 +1,16 @@
 Name: Cantrip Expansion (Spontaneous Caster)
-Nom: 
+Nom: Expansion de tour de magie (Lanceur spontané)
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous connaissez deux tours de magie supplémentaires
 
 ------ Description (en) ------
 <p>A greater understanding of your magic broadens your range of simple spells.</p>
 <p>Add two additional cantrips from your spell list to your repetoire.</p>
 ------ Description (fr) ------
+<p>Une meilleure compréhension de votre magie élargit la diversité de vos sorts les plus simples.</p>
+<p>Ajoutez deux tours de magie supplémentaires de votre liste de sorts à votre répertoire.</p>
