--- a/data/pathfinder-bestiary-3/FvywQFbFzwLV8mvW.htm
+++ b/data/pathfinder-bestiary-3/FvywQFbFzwLV8mvW.htm
@@ -1,5 +1,5 @@
 Name: Flaming Skull
-Nom: 
+Nom: Crâne enflammé
 État: aucune
 
 ------ Description (en) ------
@@ -7,3 +7,6 @@ Nom:
 <hr />
 <p>More dangerous than simple severed heads, these skulls are wreathed in unearthly flames.</p>
 ------ Description (fr) ------
+<p>Les Décapités sont les têtes réanimées des victimes de décapitation. Ces morts-vivants sans esprit volent dans les airs ou roulent pour attaquer leur proie.</p>
+<hr />
+<p>Plus dangereux que de simples têtes coupées, ces crânes sont nimbés de flammes surnaturelles.</p>
