dons changés et traduits

--- a/data/feats/class-12-bbpFExz1RXCkOhnb.htm
+++ b/data/feats/class-12-bbpFExz1RXCkOhnb.htm
@@ -4,6 +4,10 @@ PrereqEN: |ki spells
 PrereqFR: sorts ki
 État: libre
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous obtenez Sens de la vie (imprécis, 9 m)
+
 ------ Description (en) ------
 <p>You can read the presence of ki in your area. You gain imprecise lifesense out to a range of 30 feet.</p>
 ------ Description (fr) ------
