--- a/data/feats/class-18-NY2AkQscVIHEC8hQ.htm
+++ b/data/feats/class-18-NY2AkQscVIHEC8hQ.htm
@@ -1,15 +1,13 @@
 Name: Impossible Volley (Fighter)
-Nom: Volée invraisemblable
+Nom: Volée invraisemblable (Guerrier)
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You fire a volley at all foes in an area.
 Avantage: Vous faites une Frappe sur tous les adversaires situés dans une zone avec une arme à distance ayant le trait volée.
------- Benefits and spoiler ----
-Avantage: Vous faites une Frappe sur tous les adversaires situés dans une zone avec une arme à distance ayant le trait volée.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a ranged weapon with the volley trait and reload 0</p>
 <hr />
