--- a/data/feats/class-14-q2t5qfgQHFJbbV8d.htm
+++ b/data/feats/class-14-q2t5qfgQHFJbbV8d.htm
@@ -1,12 +1,12 @@
 Name: Shift Spell
-Nom: 
+Nom: Déplacer le sort
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous déplacez la zone d'un de vos sorts actifs
 
 ------ Description (en) ------
 <p><strong>Access</strong> member of the Magaambya</p>
@@ -14,3 +14,7 @@ Avantage:
 <hr />
 <p>You move the spell's area to a new location within 120 feet. The spell's remaining duration is reduced by half. The spell no longer affects its previous area.</p>
 ------ Description (fr) ------
+<p><strong>Accès</strong> membre du the Magaambya</p>
+<p><strong>Conditions</strong> Vous possédez un sort actif qui affecte une zone et vous êtes dans la portée du sort.</p>
+<hr />
+<p>Vous déplacez la zone du sort avers un nouvel endroit dans les 36 m. La durée restante du sort est réduite de moitié. Le sort n'affecte plus sa zone précédente.</p>
