--- a/data/feats/class-20-9Slu8lSOYnDtKsIb.htm
+++ b/data/feats/class-20-9Slu8lSOYnDtKsIb.htm
@@ -1,12 +1,12 @@
 Name: Ruby Resurrection
-Nom: 
+Nom: Résurrection rubis
 PrereqEN: 
 PrereqFR: 
 État: aucune
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous revenez à la vie dans une explosion de flammes
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,3 +15,10 @@ Avantage:
 <p>If you haven't used Ruby Resurrection and you die, you stay in initiative order and Ruby Resurrection triggers automatically at the start of your next turn, bringing you back to life at 0 HP before having its normal effects. This happens only if there are some remains to resurrect; for instance, if you were killed by disintegrate you wouldn't return.</p>
 <p><strong>Special</strong> This feat has the trait corresponding to the tradition of spells you cast.</p>
 ------ Description (fr) ------
+<p><strong>Fréquence</strong> une fois par jour</p>
+<p><strong>Déclencheur</strong> Vous devriez être réduit à 0 points de vie.</p>
+<hr />
+<p>Dans un jet de flammes, vous revenez en pleine santé, comme un phénix renaissant de ses cendres. Changez votre nombre de point de vie actuel à 30 et lancez une boule de feu au niveau 6 centrée sur vous. Cette boule de feu ne vous affecte pas. Vos cheveux deviennent rouge brillant pendant 1 heure.</p>
+<p>Si vous n'avez pas utilisé Résurrection rubis et que vous mourrez, vous restez dans l'ordre d'initiative et Résurrection rubis se déclenche automatiquement au début de votre prochain tour, vous ramenant à la vie à 0 points de vie avant de produire ses effets normaux. Cela ne se produit que si vous avez des restes à ressusciter ; par exemple, si vous avez été tué par une désintégration, vous ne revenez pas à la vie.</p>
+<hr />
+<p><strong>Spécial</strong> Ce don possède le trait correspondant à la tradition des sorts que vous lancez.</p>
