--- a/data/pathfinder-bestiary-3/CjAaXJDY4xpKqQEz.htm
+++ b/data/pathfinder-bestiary-3/CjAaXJDY4xpKqQEz.htm
@@ -13,4 +13,4 @@ Nom: Mégalictise
 <hr />
 <p>Ces belettes géantes sont animées par la même faim qui tenaille leurs cousines plus petites, mais en raison de leur taille beaucoup plus importante, elles peuvent rapidement dévaster la faune d'un environnement. Elles ont tendance à éviter les humanoïdes mais sont connues pour attaquer si elles sont poussées par la faim ou par la peur.</p>
 <p>Une mégalictise utilise la même morsure constrictive que les belettes plus petites, restant attachée même si d'autres créatures attaquent. Compte tenu de leur stature remarquable, une mégalictise peut abattre des proies de taille importante, y compris des chevaux et même un ours occasionnel, si l'occasion se présente.</p>
-<p>Une mégalictise peut atteindre 1,5 mètre de long et peser environ 70 kilos.</p>
+<p>Une mégalictise peut atteindre 1,5 mètres de long et peser environ 70 kilos.</p>
