dons d'archétype et noms des archétypes manquants

--- a/data/feats/ancestry-13-CAfrSLaDM0OBaNtp.htm
+++ b/data/feats/ancestry-13-CAfrSLaDM0OBaNtp.htm
@@ -2,7 +2,7 @@ Name: See the Unseen
 Nom: Voir l'invisible
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
