--- a/data/feats/ancestry-13-oaqkhZ6c0Dbk78wi.htm
+++ b/data/feats/ancestry-13-oaqkhZ6c0Dbk78wi.htm
@@ -2,7 +2,7 @@ Name: Envenomed Edge
 Nom: Avantage empoisonné
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
