--- a/data/feats/class-20-XenKYUBMWZQQ7niM.htm
+++ b/data/feats/class-20-XenKYUBMWZQQ7niM.htm
@@ -2,7 +2,7 @@ Name: Whirlwind Toss
 Nom: Lancer tournoyant
 PrereqEN: |Collateral Thrash
 PrereqFR: Maltraitance collatérale
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
