--- a/data/feats/class-20-9Slu8lSOYnDtKsIb.htm
+++ b/data/feats/class-20-9Slu8lSOYnDtKsIb.htm
@@ -2,7 +2,7 @@ Name: Ruby Resurrection
 Nom: Résurrection rubis
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
