fin des dons d'archétypes

--- a/data/feats/archetype-20-WVm2dxPOI4tK2wsJ.htm
+++ b/data/feats/archetype-20-WVm2dxPOI4tK2wsJ.htm
@@ -2,7 +2,7 @@ Name: Impossible Volley (Eldritch Archer)
 Nom: Volée invraisemblable (Archer mystique)
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
