--- a/data/feats/archetype-10-muDbZAyrE1ObyuTL.htm
+++ b/data/feats/archetype-10-muDbZAyrE1ObyuTL.htm
@@ -1,13 +1,14 @@
 Name: Beneath Notice
-Nom: 
+Nom: Éviter de se faire remarquer
 PrereqEN: 
-PrereqFR: 
-État: aucune
+PrereqFR: Dévouement de Xun de la Ligue dorée|expert en Duperie
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous disparaissez dans la foule
 
 ------ Description (en) ------
 <p>You are skilled at hiding from your foes and targets among the common populace. You gain the @Compendium[pf2e.feats-srd.e4KB4pSkx2lDBNw3]{Quick Disguise} and @Compendium[pf2e.feats-srd.RiuZT3H4QZIIEQXJ]{Slippery Secrets} skill feats. In addition, while in a crowd, you can @Compendium[pf2e.actionspf2e.AJstokjdG6iDjVjE]{Impersonate} a nondescript member of the crowd as a three action activity (one action if you are legendary in Deception)</p>
 ------ Description (fr) ------
+<p>Vous êtes habile à vous cacher de vos ennemis et de vos cibles parmi la populace. Vous obtenez les dons de compétence @Compendium[pf2e.feats-srd.e4KB4pSkx2lDBNw3]{Déguisement rapide} et @Compendium[pf2e.feats-srd.RiuZT3H4QZIIEQXJ]{Secrets insaisissables}. De plus, lorsque vous vous trouvez au sein d'une foule, vous pouvez vous @Compendium[pf2e.actionspf2e.AJstokjdG6iDjVjE]{Déguiser} en un membre indéfini de la foule comme une activité à trois actions (une action si vous êtes légendaire en Duperie)</p>
