actions, historiques et équipement

--- a/data/actions/9gDMkIfDifh61yLz.htm
+++ b/data/actions/9gDMkIfDifh61yLz.htm
@@ -1,8 +1,11 @@
 Name: Stop
-Nom: 
+Nom: S'arrêter
 État: aucune
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are piloting a vehicle in motion.</p>
 <p>You bring the vehicle to a stop.</p>
 ------ Description (fr) ------
+<p><strong>Conditions</strong> Vous êtes en train de piloter un véhicule en mouvement.</p>
+<hr />
+<p>Vous amenez le véhicule à l'arrêt.</p>
