--- a/data/backgrounds/yK40c3082U30BUX5.htm
+++ b/data/backgrounds/yK40c3082U30BUX5.htm
@@ -12,6 +12,6 @@ Nom: Bureaucrate du Grand Conseil
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Absalom et l'Île de la Pierre-Étoile</p>
 <hr />
-<p>Vous avez passé des années à travailler comme clerc d'un fonctionnaire du Gouvernement d'Absalom. Votre service vous a appris une chose ou deux à propos des discours d'encouragement et à manipuler la bureaucratie de la ville.</p>
+<p>Vous avez passé des années à travailler comme clerc d'un fonctionnaire du gouvernement d'Absalom. Votre service vous a appris une chose ou deux à propos des discours d'encouragement et à manipuler la bureaucratie de la ville.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être d'<strong>Intelligence</strong> ou de <strong>Charisme</strong> et l’autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié en Société et en Connaissance du gouvernement. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.KpFetnUqTiweypZk]{Bonne impression de groupe}.</p>
