--- a/data/feats/archetype-16-XXOc3MxbkEBMgFeT.htm
+++ b/data/feats/archetype-16-XXOc3MxbkEBMgFeT.htm
@@ -1,5 +1,5 @@
 Name: Cross the Threshold
-Nom: Traverse le seuil
+Nom: Traverser le seuil
 PrereqEN: |Ghost Eater Dedication
 PrereqFR: Dévouement de Mangeur de fantômes
 État: libre
