--- a/data/equipment/armor-00-Yr9yCuJiAlFh3QEB.htm
+++ b/data/equipment/armor-00-Yr9yCuJiAlFh3QEB.htm
@@ -1,7 +1,6 @@
 Name: Steel Shield
 Nom: Bouclier en acier
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Like wooden shields, steel shields come in a variety of shapes and sizes. Though more expensive than wooden shields, they are much more durable.</p>
@@ -23,17 +22,19 @@ Nom: Bouclier en acier
 </table>
 ------ Description (fr) ------
 <p>Comme les boucliers en bois, les boucliers en acier sont de formes et de tailles variées. Plus coûteux que les boucliers en bois, ils sont cependant beaucoup plus résistants.</p>
-<table style="height: 32px;" border="1">
-<tbody>
-<tr style="height: 15px;">
-<td style="height: 15px; width: 115px;">Solidité</td>
-<td style="height: 15px; width: 115px;">PV</td>
-<td style="height: 15px; width: 116px;">SR</td>
+<table class="pf2-table">
+<thead>
+<tr>
+<th>Solidité</th>
+<th>PV</th>
+<th>SR</th>
 </tr>
-<tr style="height: 17px;">
-<td style="height: 17px; width: 115px;">5</td>
-<td style="height: 17px; width: 115px;">20</td>
-<td style="height: 17px; width: 116px;">10</td>
+</thead>
+<tbody>
+<tr>
+<td>5</td>
+<td>20</td>
+<td>10</td>
 </tr>
 </tbody>
 </table>
