--- a/data/equipment/armor-02-IxuDS3POB6EH8TVN.htm
+++ b/data/equipment/armor-02-IxuDS3POB6EH8TVN.htm
@@ -33,23 +33,25 @@ Nom: Targe étincelante
 <p>Une targe étincelante (Solidité 3, PV 6, SR 3) est richement décorée avec des dorures et des pierres précieuses serties qui brillent dans la lumière. Lorsque vous l'avez levée, la targe étincelante vous accorde un bonus d'objet de +1 aux tests de Duperie pour Feinter.</p>
 <p>@Compendium[pf2e.equipment-effects.iEkH8BKLMUa2wxLX]{Effet: Targe étincelante}</p>
 <hr />
-<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer;</p>
-<p><strong>Fréquence</strong> une fois par jour;</p>
-<p><strong>Déclencheur</strong> Vous feintez;</p>
-<p><strong>Conditions</strong> Vous avez levé votre targe étincelante;</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer ;</p>
+<p><strong>Fréquence</strong> une fois par jour ;</p>
+<p><strong>Déclencheur</strong> Vous feintez ;</p>
+<p><strong>Conditions</strong> Vous avez levé votre targe étincelante ;</p>
 <p><strong>Effet</strong> Lorsque vous feintez, la targe étincelante scintille puissamment. En cas de succès de la Feinte, la cible est éblouie pendant 1 round.</p>
 <hr />
-<table style="height: 32px;" border="1">
-<tbody>
-<tr style="height: 15px;">
-<td style="height: 15px; width: 115px;">Solidité</td>
-<td style="height: 15px; width: 115px;">PV</td>
-<td style="height: 15px; width: 116px;">SR</td>
+<table class="pf2-table">
+<thead>
+<tr>
+<th>Solidité</th>
+<th>PV</th>
+<th>SR</th>
 </tr>
-<tr style="height: 17px;">
-<td style="height: 17px; width: 115px;">3</td>
-<td style="height: 17px; width: 115px;">6</td>
-<td style="height: 17px; width: 116px;">3</td>
+</thead>
+<tbody>
+<tr>
+<td>3</td>
+<td>6</td>
+<td>3</td>
 </tr>
 </tbody>
 </table>
