--- a/data/pathfinder-bestiary-3/Rgy8OyRY5szgE6d0.htm
+++ b/data/pathfinder-bestiary-3/Rgy8OyRY5szgE6d0.htm
@@ -1,5 +1,5 @@
 Name: Empress Ice Worm
-Nom: Ver des glaces impératrice
+Nom: Ver de glace impératrice
 État: libre
 
 ------ Description (en) ------
@@ -15,4 +15,4 @@ Nom: Ver des glaces impératrice
 <p>Lorsqu'une zone manque de nourriture, les vers-foreur d'une nuée deviennent de plus en plus agités et désespérés. Finalement, à un certain signal chimique, les vers commencent à se cannibaliser les uns les autres, s'entre-dévorant dans une frénésie trop horrible à voir. Un seul ver émerge victorieux de cette mêlée ; il devient rapidement plus grand et plus vorace jusqu'à atteindre une taille absolument éléphantesque.</p>
 </p>Ce ver-foreur Impératrice ne vit que brièvement, car elle part à la recherche d'une nouvelle aire d'alimentation et mange tout sur son passage pour tenter de subvenir à ses besoins. Cependant, le métabolisme vorace du ver Impératrice exige de son corps plus que ce qu'il peut physiquement soutenir, car elle n'existe que comme un vaisseau pour la génération suivante. La plupart ne vivent que quelques jours, ou quelques semaines dans le meilleur des cas, voyageant et mangeant sans cesse avant de mourir - et, ce faisant, de donner naissance à de nouvelles nuées de vers foreurs.</p>
 <hr />
-<p>Découverts en creusant des tunnels dans les glaciers sous la Couronne du monde, ces vers bleu pâle se comportent de la même manière que leurs cousins élevés dans le sol, mais leur acide glacial inflige des marques semblables à des engelures à tout ce qu'ils touchent. Les vers des glaces fuient toujours l'eau liquide mais sont immunisés contre le froid plutôt que contre l'acide, et ils substituent le froid à l'acide dans toutes leurs attaques et capacités.</p>
+<p>Découverts en creusant des tunnels dans les glaciers sous la Couronne du monde, ces vers bleu pâle se comportent de la même manière que leurs cousins élevés dans le sol, mais leur acide glacial inflige des marques semblables à des engelures à tout ce qu'ils touchent. Les vers de glace fuient toujours l'eau liquide mais sont immunisés contre le froid plutôt que contre l'acide, et ils substituent le froid à l'acide dans toutes leurs attaques et capacités.</p>
