--- a/data/pathfinder-bestiary-3/iiXjQ1SchGiotpVp.htm
+++ b/data/pathfinder-bestiary-3/iiXjQ1SchGiotpVp.htm
@@ -1,9 +1,12 @@
 Name: Skeleton Infantry
-Nom: 
-État: aucune
+Nom: Squelette d'infanterie
+État: libre
 
 ------ Description (en) ------
 <p>Almost any creature that had bones in life and leaves them behind in death can become a shambling, undead skeleton-humanoids, beasts, aberrations, fey, and more.</p>
 <hr />
 <p>This troop of skeletons was once a cohort of highly disciplined spear-and-shield infantry from an ancient empire.</p>
 ------ Description (fr) ------
+<p>Presque toutes les créatures qui avaient des os dans la vie et les laissent derrière elles dans la mort. Elles peuvent s'animer en un squelette ambulant et mort-vivant - humanoïdes, bêtes, aberrations, fey, et plus encore.</p>.
+<hr />
+</p> Cette troupe de squelettes était autrefois une cohorte d'infanterie munis de lances et boucliers,  très disciplinée d'un ancien empire.</p>
