--- a/data/equipment/consumable-16-dIqIuqjPbIuh9TYn.htm
+++ b/data/equipment/consumable-16-dIqIuqjPbIuh9TYn.htm
@@ -1,6 +1,6 @@
 Name: Tusk and Fang Chain
-Nom: 
-État: aucune
+Nom: Chaine du croc et de la défense
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">f </span> command;</p>
@@ -13,3 +13,12 @@ Nom:
 <p><strong>Failure</strong> The creature is confused for 1 round.</p>
 <p><strong>Critical Failure</strong> The creature is confused for 1 minute and the creature doesn't receive a flat check to end its confusion if it takes damage. At the end of each of its turns, it attempts a new Will save, ending the effect on a success.</p>
 ------ Description (fr) ------
+<p><strong>Activation</strong> <span class="pf2-icon">f </span> command;</p>
+<p><strong>Déclencheur</strong> Vous agrippez ou entravez une créature ou êtes agrippé ou entravé par une créature</p>
+<hr />
+<p>Cette longueur de chaîne en argent comporte un croc de tigre à une extrémité et la pointe d'une défense de sanglier sanguinaire à l'autre. Lorsque vous activez la chaîne, une chaîne éphémère encercle la tête de la créature ciblée et une cacophonie de sons animaux trouble son esprit. Elle doit effectuer un jet de <span data-pf2-saving-throw="will" data-pf2-traits="" data-pf2-label="DD Chaine du croc et de la défense" data-pf2-dc="35" data-pf2-show-dc="owner">Volonté</span>.</p>
+<hr />
+<p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confuse} lors de sa prochaine action.</p>
+<p><strong>Échec</strong> La créature est confuse pendant 1 round.</p>
+<p><strong>Échec critique</strong> La créature est confuse pendant 1 minute et la créature n'obtient pas de test nu à la fin de sa confusion si elle subit des dégâts. Au terme de chacun de ses tours, elle tente un nouveau jet de Volonté, mettant un terme en cas de succès.</p>
