--- a/data/equipment/equipment-01-wTYxAWrdsQ6SLVr9.htm
+++ b/data/equipment/equipment-01-wTYxAWrdsQ6SLVr9.htm
@@ -1,6 +1,6 @@
 Name: Genealogy Mask
-Nom: 
-État: aucune
+Nom: Masque généalogique
+État: libre
 
 ------ Description (en) ------
 <p><strong>Access</strong> Alijae ethnicity</p>
@@ -13,3 +13,12 @@ Nom:
 <hr />
 <p><strong>Craft Requirements</strong> Supply a casting of @Compendium[pf2e.spells-srd.dtOUkMC57izf93z5]{Ancestral Memories} or @Compendium[pf2e.spells-srd.D442XMADp01qJ7Cs]{Mindlink}. You must be an Alijae elf.</p>
 ------ Description (fr) ------
+<p><strong>Accès</strong> ethnie alijae</p>
+<hr />
+<p>Ces grnds masques sont forgés dans des métaux précieuxou gravés dans le bois et ont la tâche de garder l'histoire d'une famille. La plupart des alijae se voient remettre un masque généalogique lorsqu'ils deviennent adultes, qu'ils transmettent à leur successeur à leur mort. Lorsqu'un membre de la famille décrite dans le masque généalogique accomplit un événement particulièrement important alors qu'il porte le masque, ses yeux et ses oreilles s'animent, permettant à l'objet d'être témoin et d'enregistrer les faits pour la postérité. Les familles n'ont pas toutes les mêmes exigences en ce qui concerne les masques généalogiques : certaines privilégient l'exactitude et les faits cliniques objectifs, tandis que d'autres aiment embellir leurs histoires jusqu'à la limite de la crédibilité pour pouvoir raconter une bonne histoire.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> sur ordre ;</p>
+<p><strong>Fréquence</strong> une fois par jour ;</p>
+<p><strong>Effet</strong> Vous demandez au masque de raconter les hauts faits d'un ancètre particulier et le masque parle pendant 10 minutes, se rrappelant des contes qu'il connait à propose de cet ancètre. Le masque est limité par les informations que cet ancètre particulier a partagé avec lui.</p>
+<hr />
+<p><strong>Condition de fabrication</strong> Fournir l'incantation de @Compendium[pf2e.spells-srd.dtOUkMC57izf93z5]{Souvenirs ancestraux} ou @Compendium[pf2e.spells-srd.D442XMADp01qJ7Cs]{Lien mental}. Vous devez être un elfe alijae.</p>
