--- a/data/equipment/equipment-09-PDEhZSibXvQdVsSq.htm
+++ b/data/equipment/equipment-09-PDEhZSibXvQdVsSq.htm
@@ -1,5 +1,5 @@
 Name: Oath of the Devoted
-Nom: 
+Nom: Serment du dévoué
 État: aucune
 
 ------ Description (en) ------
@@ -12,3 +12,11 @@ Nom:
 <hr />
 <p><strong>Special</strong> If you are a zombie at a time when Mzali is entirely purged of foreigners, your duty is fulfilled and you are immediately destroyed.</p>
 ------ Description (fr) ------
+<p>Vous obtenez une résistance feu et mental 5. Lorsque vous mourrez, vous vous relevez en une créature avec le trait zombie le round qui suit ; si vous êtes un PJ, vous devenez un PNJ sous le contrôle de Walkena. Vos caractéristiques restent les mêmes sauf que votre alignement devient mauvais. Si vous êtes amené à 0 pv alors que vous êtes un zombi, vous êtes détruit et ne pouvez pas vous relever de nouveau.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> sur ordre ;</p>
+<p><strong>Fréquence</strong> une fois par jour ;</p>
+<p><strong>Effet</strong> Vous obtenez un bonus de statut de +1 aux jets de Sauvegarde. Choisissez une arme ou une Frappe à mains nues ; votre attaque choisie inflige [[/r 1d6 #feu]] dégâts de feu supplémentaires pendant la prochaine minute.</p>
+<p>@Compendium[pf2e.equipment-effects.zY7cemRcFD2zAVbC]{Effet: Serment du dévoué}</p>
+<hr />
+<p><strong>Spécial</strong> Si vous êtes un zombi au moment où Mzali est entièrement purgé des étrangers, votre devoir est accompli et vous êtes immédiatment détruit.</p>
