--- a/data/spell-effects/03-DENMzySYANjUBs4O.htm
+++ b/data/spell-effects/03-DENMzySYANjUBs4O.htm
@@ -45,11 +45,11 @@ Nom: Effet : Forme d'insecte (Mille-pattes)
 <ul>
 <li><strong>Mille-pattes</strong>
 <ul>
-<li>Vitesse 7,50 mètres, Vitesse d'escalade 7,50 mètres; vision dans le noir;</li>
-<li><strong>Corps à cors</strong> <span class="pf2-icon">1</span> Mandibules, <strong>Dégâts</strong> 1d8 perforants plus 1d4 poison persistant.</li>
+<li>Vitesse 7,50 mètres, Vitesse d'escalade 7,50 mètres; vision dans le noir ;</li>
+<li><strong>Corps à corps</strong> <span class="pf2-icon">1</span> Mandibules, <strong>Dégâts</strong> 1d8 perforants plus 1d4 poison persistant.</li>
 </ul>
 <hr />
-<p><strong>Intensifié (4e)</strong> Votre Taille de combat est Grande, et vos attaques ont une portée de 3 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 15 PV temporaires, un modificateur d'attaque de +16, un bonus aux dégâts de +6, et un modificateur d'athlétisme de +16.</p>
-<p><strong>Intensifié (5e)</strong> Votre forme de combat est Très grande, et vos attaques ont une portée de 4,50 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 20 points de vie temporaires, un modificateur d'attaque de +18, un bonus aux dégâts de +2 et un doublement des dés de dégâts (y compris @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Dégâts persistants}), ainsi qu'un modificateur d'Athlétisme de +20.</p>
+<p><strong>Intensifié (4e)</strong> Votre Taille de combat est Grande et vos attaques ont une portée de 3 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 15 PV temporaires, un modificateur d'attaque de +16, un bonus aux dégâts de +6, et un modificateur d'athlétisme de +16.</p>
+<p><strong>Intensifié (5e)</strong> Votre forme de combat est Très grande et vos attaques ont une portée de 4,50 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 20 points de vie temporaires, un modificateur d'attaque de +18, un bonus aux dégâts de +2 et un doublement des dés de dégâts (y compris @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Dégâts persistants}), ainsi qu'un modificateur d'Athlétisme de +20.</p>
 <hr />
 <p><em>Remarque : pour accentuer cet effet, importez-le dans votre répertoire d'objets et modifiez le niveau avant de l'ajouter à la cible</em></p>
